crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition_parser__tests__chemical_composition-10.snap
---
source: crates/polychem/src/atoms/chemical_composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    Some(
        (
            Remove,
            2,
            "Proton",
        ),
    ),
)
