crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition_parser__tests__chemical_composition-5.snap
---
source: crates/polychem/src/atoms/chemical_composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            3,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Proton",
        ),
    ),
)
